fixtures/errors/class_private_field.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: unsupported member property in update expression target
 --> errors/class_private_field.js:6:5
6 |     this.#count++;
  |     ^^^^^^^^^^^^^

